# intercom

./: .gitignore  Cargo.toml  build.rs  mod.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
docs/: 技术设计.md  需求PRD.md
docs/acceptance/: integration-polish-acceptance.md
openspec/changes/: .agent-context.md  .fix-decisions.md
openspec/changes/2026-07-13-intercom-group-info-leave/: design.md  proposal.md  tasks.md
openspec/changes/2026-07-13-intercom-ungrouped-ui/: design.md  proposal.md  tasks.md
openspec/changes/2026-07-13-intercom-voice-changer-preview/: design.md  proposal.md  tasks.md
openspec/changes/2026-07-13-wire-audio-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/2026-07-13-wire-network-runtime/: design.md  proposal.md  tasks.md
openspec/changes/2026-07-13-wire-ptt-end-to-end/: design.md  proposal.md  tasks.md
openspec/changes/2026-07-13-wire-settings-side-effects/: design.md  proposal.md  tasks.md
openspec/changes/app-shell-settings/: tasks.md
openspec/changes/hal-bsp-drivers/: design.md  tasks.md
openspec/changes/integration-polish/: tasks.md
openspec/changes/intercom-app-ui/: tasks.md
openspec/changes/intercom-jitter-mixing/: design.md  proposal.md  tasks.md
openspec/changes/intercom-packet-format/: design.md  proposal.md  tasks.md
openspec/changes/intercom-pairing-three-phase/: proposal.md  tasks.md
openspec/changes/intercom-restore-heartbeat/: design.md  tasks.md
openspec/changes/intercom-voice-ptt/: design.md  tasks.md
openspec/changes/power-screen-management/: proposal.md  tasks.md
openspec/changes/project-skeleton/: proposal.md  tasks.md
openspec/changes/safety-diagnostics/: design.md  proposal.md  tasks.md
openspec/changes/services-audio-pipeline/: design.md  tasks.md
openspec/changes/services-display-input-power/: tasks.md
openspec/changes/services-network-espnow/: tasks.md
openspec/changes/services-storage-crypto/: design.md  proposal.md  tasks.md
openspec/changes/voice-changer/: tasks.md
openspec/specs/audio-service/: spec.md
openspec/specs/crypto-service/: spec.md
openspec/specs/hal-bsp/: spec.md
openspec/specs/input-service/: spec.md
openspec/specs/integration-polish/: spec.md
src/: board_profile.rs  main.rs
src/apps/: intercom_app.rs  mod.rs  settings.rs  shell.rs
src/hal/: audio_in.rs  audio_out.rs  backlight.rs  battery.rs  buttons.rs  lcd.rs  mod.rs  radio.rs  touch.rs
src/intercom/: codec.rs  heartbeat.rs  jitter.rs  mod.rs  packet.rs  pairing.rs  power_mgmt.rs  safety.rs  state.rs  voice.rs  voice_changer.rs
src/services/: display.rs  display_buf.rs  input.rs  mod.rs  power.rs
ui/: boot.slint
ui/settings/: about.slint
(+76 files in other folders)
