[package]
name = "intercom"
version = "0.1.0"
authors = ["Liu Song <lifecyc@163.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "intercom"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[features]
default = []
# Opus codec — enabled in change 05 when the audio pipeline is wired up. Kept
# optional in change 01 because audiopus_sys builds libopus from source via
# cmake, which needs riscv32-esp-elf-gcc on PATH; the esp-idf-sys build sets
# up that PATH only for its own subprocess, not for audiopus_sys's build
# script. Cross-compile wiring (LIBOPUS_LIB_DIR or toolchain PATH) is change
# 05 work. (design D6: declared now, called later.)
opus = ["dep:audiopus"]

[dependencies]
log = "0.4"
anyhow = "1"
# esp-idf-svc: tasks.md specifies 0.49; project was templated with 0.52.1 (newer, same major 0,
# satisfies design D6 "不锁死 minor, 仅锁 major"). Keep working newer version.
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

# slint runtime is intentionally NOT a dependency in change 01. slint's transitive
# deps (fontique/memmap2) do not yet compile for `target_os = "espidf"` (libc lacks
# PROT_*/MAP_*/MS_*/MADV_* and mprotect/madvise/msync; fontique assumes 64-bit
# atomics). The runtime slint platform backend + espidf dep patches are wired up
# in change 02 (hal-bsp-drivers) per proposal.md Non-Goals. `slint-build` remains
# a build-dependency so `ui/boot.slint` is still validated at compile time.
# slint = { version = "1.6", default-features = false, features = ["compat-1-2", "std", "libm", "renderer-software"] }

# Crypto (declared now, called starting change 03/09)
curve25519-dalek = "4"

# Opus codec binding (declared now, called starting change 05)
# NB: 0.3.x only has a prerelease on crates.io; pin explicitly (design D6 "仅锁 major" 放宽至 0.3 系列)
audiopus = { version = "0.3.0-rc.0", optional = true }

# Drawing surface (fallback if slint is too heavy; used by DisplayService later)
embedded-graphics = "0.8"

[build-dependencies]
embuild = "0.33"
slint-build = "1.6"
